reorginized project structure

--- a/experiments/ml_model.ipynb
+++ b/experiments/ml_model.ipynb
@@ -18,7 +18,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -33,13 +33,13 @@
         "\n",
         "  \"X_train.csv\" : \"https://www.dropbox.com/scl/fi/eraukmu5w1r56vigj1bla/X_train.csv?rlkey=gpzrwnvhhk6q07r9nklz09fl1&st=vnux3ves&dl=1\",\n",
         "\n",
-        "  \"X_test\" : \"https://www.dropbox.com/scl/fi/a4dlgfke5swfjkolikr5o/X_test.csv?rlkey=2u02d3zmy0ls59katzrwljpgq&st=w6w9egec&dl=1\"\n",
+        "  \"X_test.csv\" : \"https://www.dropbox.com/scl/fi/a4dlgfke5swfjkolikr5o/X_test.csv?rlkey=2u02d3zmy0ls59katzrwljpgq&st=w6w9egec&dl=1\"\n",
         "}\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 3,
       "metadata": {
         "id": "MjMYo4awhxkG"
       },
@@ -61,7 +61,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -324,7 +324,7 @@
       "outputs": [],
       "source": [
         "X_train = dfs['X_train.csv']\n",
-        "X_test = dfs['X_test']\n",
+        "X_test = dfs['X_test.csv']\n",
         "y_test = dfs['y_test.csv']\n",
         "y_train = dfs['y_train.csv']\n",
         "# X_train = pd.read_csv('X_train.csv')\n",
@@ -2083,7 +2083,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.5"
+      "version": "3.12.8"
     },
     "toc": {
       "base_numbering": 1,
